# CASCADE

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  cascade_core.py  cascade_simulation.py  csc_calibration.py  masfe_core.py  masfe_simulation.py  pyproject.toml  pytest.ini  real_modis_replay.py  report.bib  report.tex  requirements-dev.txt  requirements.txt  simulation_metrics.json  tudelft-report.cls  unit_economics.py
.github/workflows/: ci.yml
appendix/: simulation-code.tex  swap-budget.tex
archive/legacy-root-scripts/: README.md
artifacts/benchmark/: ablation_metrics.json  additional_ablations.json  baselines_comparison_table.tex  csc_sensitivity.json  evi_only_baseline.json  roc_metrics.json  simulation_metrics.json
artifacts/calibration/: pareto_candidates.json  selected_candidate.json  top_candidates.json
artifacts/economics/: unit_economics.json  unit_economics_table.tex
cascade/: __init__.py
docs/: advisor_outreach.md  replay_anchors.md  repo_structure.md  reproducibility.md  submission_checklist.md  unit_economics.md  validation.md  verification_validation_plan.md  video_script.md  westlands_2014_stress_replay.md
examples/: westlands_replay.py  wildfire_skeleton.py
frontmatter/: nomenclature.tex  summary.tex  title-page.tex
mainmatter/: conclusion.tex  impact.tex  introduction.tex  next-steps.tex  proposed-solution.tex  team-market.tex
notebooks/: real_modis_policy_replay.ipynb
outputs/: ablation_metrics.json  additional_ablations.json  baselines_comparison_table.tex  csc_sensitivity.json  evi_only_baseline.json  roc_metrics.json  simulation_metrics.json
outputs/unit_economics/: unit_economics_table.tex
paper/: EmilLambert_CASCADE.bbl  EmilLambert_CASCADE.blg  EmilLambert_CASCADE.tex  EmilLambert_CASCADE_Abstract.md  EmilLambert_MASFE.bbl  EmilLambert_MASFE.blg  EmilLambert_MASFE.tex  references.bib  render_action_timeline.py  render_additional_ablation_curves.py  report.blg  report.tex
paper/scripts/: render_action_timeline.py  render_additional_ablation_curves.py  render_architecture.py
papers/01_nasa-space-to-soil/: references.bib
papers/02_arxiv/: references.bib  remaining-tasks.md
papers/softwarex/: cover_letter.md  declarationStatement.docx  (+6 more)
scripts/: benchmark.py  calibrate_csc.py  export_release_artifacts.py  replay_modis.py  unit_economics.py
tests/: test_canonical_claims.py  test_westlands_example.py  test_wildfire_skeleton.py
(+69 files in other folders)
