[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade"
version = "0.1.0"
description = "CASCADE: An Onboard Crop Anomaly Screening, Confirmation, and Alert Downlink Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Emil Lambert" },
]
dependencies = [
  "requests>=2.31,<3",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "rasterio>=1.3,<2",
  "tqdm>=4.66,<5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
